--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <p>O novo produto traduz a ousadia e efervescência da Geração Z em uma fórmula inovadora que garante sabor intenso a cada gole.</p>
         <a href="">Comprar</a>
       </div>
-      <img src="/img/pepsi_black.png" alt="">
+      <img src="img/pepsi_black.png" alt="">
     </div>
   </div>
 
